--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -37,45 +37,59 @@ add_subdirectory(external)
 add_timemory_google_test(mangle_tests
     DISCOVER_TESTS
     SOURCES         mangle_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
+
+add_timemory_google_test(tuple_tests
+    DISCOVER_TESTS
+    SOURCES         tuple_tests.cpp
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-papi timemory-analysis-tools timemory-caliper)
 
 add_timemory_google_test(macro_tests
     DISCOVER_TESTS
     SOURCES         macro_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
 
 add_timemory_google_test(hybrid_tests
     DISCOVER_TESTS
     SOURCES         hybrid_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options ${HYBRID_COMPONENTS})
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    ${HYBRID_COMPONENTS} timemory-analysis-tools)
 
 add_timemory_google_test(timing_tests
     DISCOVER_TESTS
     SOURCES         timing_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
 
 add_timemory_google_test(rusage_tests
     DISCOVER_TESTS
     SOURCES         rusage_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
 
 if(TIMEMORY_USE_PAPI)
     add_timemory_google_test(papi_tests
         DISCOVER_TESTS
         SOURCES         papi_tests.cpp
-        LINK_LIBRARIES  timemory-headers timemory-papi timemory-compile-options timemory-develop-options)
+        LINK_LIBRARIES  timemory-headers timemory-papi timemory-compile-options
+                        timemory-develop-options timemory-analysis-tools)
 endif()
 
 add_timemory_google_test(apply_tests
     DISCOVER_TESTS
     SOURCES         apply_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
 
 if(TIMEMORY_USE_ARCH)
     add_timemory_google_test(aligned_allocator_tests
         DISCOVER_TESTS
         SOURCES         aligned_allocator_tests.cpp
-        LINK_LIBRARIES  timemory-headers timemory-arch timemory-compile-options timemory-develop-options)
+        LINK_LIBRARIES  timemory-headers timemory-arch timemory-compile-options
+                        timemory-develop-options timemory-analysis-tools)
 endif()
 
 set_source_files_properties(cuda_tests.cpp cupti_tests.cpp
@@ -88,7 +102,8 @@ if(TIMEMORY_USE_CUDA)
         DISCOVER_TESTS
         SOURCES         cuda_tests.cpp
         LINK_LIBRARIES  timemory-headers timemory-arch   timemory-compile-options
-                        timemory-cuda    timemory-cudart timemory-develop-options)
+                        timemory-cuda    timemory-cudart timemory-develop-options
+                        timemory-analysis-tools)
 endif()
 
 if(TIMEMORY_USE_CUDA AND TIMEMORY_USE_NVTX)
@@ -96,7 +111,8 @@ if(TIMEMORY_USE_CUDA AND TIMEMORY_USE_NVTX)
         DISCOVER_TESTS
         SOURCES         cuda_tests.cpp
         LINK_LIBRARIES  timemory-headers timemory-arch   timemory-compile-options timemory-develop-options
-                        timemory-cuda    timemory-cudart timemory-nvtx)
+                        timemory-cuda    timemory-cudart timemory-nvtx
+                        timemory-analysis-tools)
 endif()
 
 if(TIMEMORY_USE_CUPTI AND HAS_CUDA_cuda_LIBRARY)
@@ -108,27 +124,28 @@ if(TIMEMORY_USE_CUPTI AND HAS_CUDA_cuda_LIBRARY)
         SOURCES         cupti_tests.cpp
         LINK_LIBRARIES  timemory-headers timemory-arch   timemory-compile-options timemory-develop-options
                         timemory-cuda    timemory-cupti  # timemory-cudart-device
-                        cupti-compile-options)
+                        cupti-compile-options timemory-analysis-tools)
 endif()
 
 if(_HAS_PROFILER)
     add_timemory_google_test(gperf_cpu_tests
         SOURCES         gperf_cpu_tests.cpp
-        LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options timemory-gperftools-cpu
+        LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                        timemory-gperftools-cpu timemory-analysis-tools
         ENVIRONMENT     "CPUPROFILE_FREQUENCY=1000;CPUPROFILE_REALTIME=1")
 endif()
 
 add_timemory_google_test(gperf_fake_cpu_tests
     DISCOVER_TESTS
     SOURCES         gperf_cpu_tests.cpp
-    LINK_LIBRARIES  timemory-headers)
+    LINK_LIBRARIES  timemory-headers timemory-analysis-tools)
 
 if(_HAS_TCMALLOC)
     add_timemory_google_test(gperf_heap_tests
         DISCOVER_TESTS
         SOURCES         gperf_heap_tests.cpp
         LINK_LIBRARIES  timemory-headers    timemory-arch   timemory-compile-options timemory-develop-options
-                        timemory-gperftools-heap)
+                        timemory-gperftools-heap timemory-analysis-tools)
 endif()
 
 if(TIMEMORY_USE_GOTCHA)
@@ -138,10 +155,12 @@ if(TIMEMORY_USE_GOTCHA)
         LINK_LIBRARIES  timemory-headers    timemory-compile-options timemory-develop-options
                         timemory-gotcha     timemory-mpi
                         timemory-papi       timemory-vector
-                        timemory-arch       gotcha-tests-lib)
+                        timemory-arch       gotcha-tests-lib
+                        timemory-analysis-tools)
 endif()
 
 add_timemory_google_test(priority_tests
     DISCOVER_TESTS
     SOURCES         priority_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
