--- a/examples/ex-ert/CMakeLists.txt
+++ b/examples/ex-ert/CMakeLists.txt
@@ -1,24 +1,28 @@
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
+set(_USE_CUDA ON)
 # this is for internal use
 if("${CMAKE_PROJECT_NAME}" STREQUAL "timemory")
     get_property(LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
     if(NOT "CUDA" IN_LIST LANGUAGES OR NOT CMAKE_CUDA_COMPILER OR NOT TIMEMORY_USE_CUDA)
-        return()
+        set(_USE_CUDA OFF)
     endif()
 endif()
 
-project(timemory-ERT-Example LANGUAGES CXX CUDA)
+project(timemory-ERT-Example LANGUAGES CXX)
 
 set(timemory_FIND_COMPONENTS_INTERFACE timemory-ert-example)
 set(COMPONENTS cuda compile-options arch vector mpi)
 
-set_source_files_properties(ex_ert.cpp PROPERTIES
-    LANGUAGE CUDA
-    LINKER_LANGUAGE CUDA)
+option(USE_CUDA "Enable CUDA" ${_USE_CUDA})
+if(USE_CUDA)
+    set_source_files_properties(ex_ert.cpp PROPERTIES
+        LANGUAGE CUDA
+        LINKER_LANGUAGE CUDA)
+endif()
 
 find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
+
 add_executable(ex_ert ex_ert.cpp)
 target_link_libraries(ex_ert timemory-ert-example)
-#set_target_properties(ex_ert PROPERTIES LANGUAGE CUDA LINKER_LANGUAGE CUDA)
 install(TARGETS ex_ert DESTINATION bin)
