--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,4 +23,5 @@ add_subdirectory(ex-cuda-event)
 add_subdirectory(ex-caliper)
 add_subdirectory(ex-ert)
 add_subdirectory(ex-gotcha)
+add_subdirectory(ex-likwid)
 add_subdirectory(ex-minimal)
