MPI fixes to JSON + std::get for auto types + user signals + thread_scope_only + MPI_Init_thread + time output
- trait::thread_scope_only for components that should not be collapsed per-thread
- std::get for auto_list and auto_tuple
- MPI serialization of storage
- simplified sys_signals to not be prefixed with 's'
- compile extern complete_list
- OBJECT library for extern
- changed mpi::initialize to use MPI_Init_thread
- PyCTest updates

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,15 +13,21 @@ project(timemory-Examples C CXX)
 #
 
 add_subdirectory(ex-c)
+add_subdirectory(ex-minimal)
 add_subdirectory(ex-optional)
 add_subdirectory(ex-cxx-basic)
 add_subdirectory(ex-cxx-tuple)
 add_subdirectory(ex-cxx-overhead)
-add_subdirectory(ex-cpu-roofline)
-add_subdirectory(ex-gpu-roofline)
-add_subdirectory(ex-cuda-event)
+
+# external package related
 add_subdirectory(ex-caliper)
-add_subdirectory(ex-ert)
 add_subdirectory(ex-gotcha)
 add_subdirectory(ex-likwid)
-add_subdirectory(ex-minimal)
+
+# GPU related
+add_subdirectory(ex-cuda-event)
+
+# Roofline related
+add_subdirectory(ex-ert)
+add_subdirectory(ex-cpu-roofline)
+add_subdirectory(ex-gpu-roofline)
