--- a/examples/ex-minimal/CMakeLists.txt
+++ b/examples/ex-minimal/CMakeLists.txt
@@ -3,7 +3,15 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(timemory-Minimal-Example LANGUAGES C CXX)
 
 set(timemory_FIND_COMPONENTS_INTERFACE timemory-minimal-example)
-set(COMPONENTS headers compile-options analysis-tools papi caliper)
+set(COMPONENTS headers compile-options analysis-tools)
+option(USE_PAPI "Enable PAPI support" OFF)
+option(USE_CALIPER "Enable Caliper support" OFF)
+if(USE_PAPI)
+  list(APPEND COMPONENTS papi)
+endif()
+if(USE_CALIPER)
+  list(APPEND COMPONENTS caliper)
+endif()
 find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
 
 set(TIMEMORY_C_LIBRARY )
