--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -10,7 +10,7 @@ if(USE_MPI)
     list(APPEND COMPONENTS mpi)
 endif()
 
-option(USE_PAPI "Enable PAPI" ON)
+option(USE_PAPI "Enable PAPI" OFF)
 if(USE_PAPI)
     list(APPEND COMPONENTS papi)
 endif()
