Updates to VTune components + instruction roofline metrics + instruction_roofline setting

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -30,6 +30,10 @@ if(TIMEMORY_USE_CALIPER)
     list(APPEND HYBRID_COMPONENTS timemory-caliper)
 endif()
 
+if(TIMEMORY_USE_VTUNE)
+    list(APPEND HYBRID_COMPONENTS timemory-vtune)
+endif()
+
 message(STATUS "[${PROJECT_NAME}] hybrid test components: ${HYBRID_COMPONENTS}")
 
 add_subdirectory(external)
