Cleaned up travis file w.r.t. coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -248,14 +248,8 @@ after_success:
   - eval "${MATRIX_EVAL}"
   - SUBMIT_COVERAGE=0
   - if [ -n "${COVERAGE}" ]; then SUBMIT_COVERAGE=1; fi
-  # Create lcov report
-  # capture coverage info
+  # Create lcov report: capture coverage info, filter, debugging, and upload
   - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --directory . --capture --output-file coverage.info ; fi
-  # filter out system and extra files.
-  # To also not include test code in coverage add them with full path to the patterns: '*/tests/*'
-  - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info; fi
-  # output coverage data for debugging (optional)
+  - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' '*/external/*' --output-file coverage.info; fi
   - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --list coverage.info; fi
-  # Uploading to CodeCov
-  # '-f' specifies file(s) to use and disables manual coverage gathering and file search which has already been done above
   - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"; fi
