MPIP updates + Python MPIP support + minor gotcha changes + UPCXX support in library
- timemory.init_mpip()
- timemory.mpi_support.enable_mpip(permit=[], reject=[])
- removed gotcha<>::get_blacklist() --> gotcha<>::get_reject_list()
- added gotcha<>::get_permit_list()

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -310,6 +310,11 @@ export(
 #
 add_subdirectory(tools)
 
+add_library(timemory-mpip-library INTERFACE)
+if(TARGET timemory-mpip)
+    target_compile_definitions(timemory-mpip-library INTERFACE TIMEMORY_USE_MPI_P)
+    target_link_libraries(timemory-mpip-library INTERFACE timemory-mpip)
+endif()
 
 #----------------------------------------------------------------------------------------#
 # Python bindings
