auto_user_bundle + extern updates + new files
- created timemory/mpl/stl_overload.hpp
- created timemory/mpl/function_traits.hpp
- improved user_bundle
- added user_bundle_0 and user_bundle_1 to auto_timer

--- a/examples/ex-cxx-basic/CMakeLists.txt
+++ b/examples/ex-cxx-basic/CMakeLists.txt
@@ -3,9 +3,15 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(timemory-CXX-Basic-Example LANGUAGES CXX)
 
 set(timemory_FIND_COMPONENTS_INTERFACE timemory-cxx-basic-example)
-set(COMPONENTS compile-options analysis-tools)
+set(COMPONENTS cxx compile-options analysis-tools)
+
+option(USE_TAU "Enable TAU support" OFF)
 option(USE_PAPI "Enable PAPI support" OFF)
 option(USE_CALIPER "Enable Caliper support" OFF)
+
+if(USE_TAU)
+    list(APPEND COMPONENTS tau)
+endif()
 if(USE_PAPI)
     list(APPEND COMPONENTS papi)
 endif()
