gotcha_invoker for replacing gotcha wrapped function

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -168,7 +168,8 @@ if(TIMEMORY_USE_GOTCHA)
                         timemory-gotcha     timemory-mpi
                         timemory-papi       timemory-vector
                         timemory-arch       gotcha-tests-lib
-                        timemory-analysis-tools)
+                        timemory-analysis-tools
+                        m)
 endif()
 
 add_timemory_google_test(priority_tests
