--- a/cmake/Templates/timemory-config-components.cmake.in
+++ b/cmake/Templates/timemory-config-components.cmake.in
@@ -124,7 +124,9 @@ foreach(_LANGUAGE ${_LANGUAGES})
         unset(_CUDART)
         unset(_CUDART_DEV)
     else()
-        @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_LANGUAGE}-${_LINK})
+        if(TARGET timemory-${_LANGUAGE}-${_LINK})
+            @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_LANGUAGE}-${_LINK})
+        endif()
     endif()
 endforeach()
 
